tests/instantiating/invalid/range_prop_negative_value_in_list/bus.fbd
Main bus
	P proc
		PI param; range = [1, -127]
